 - let Unit*Collision callins skip engine collision handling if true is returned (from any synced gadget)
 - call gadgetHandler:Explosion for unsynced gadgets (but discard the return value)
 - allow specifying source by position but target by ID for Spring.GetUnitWeaponHaveFreeLineOfFire
 - allow setting terrain-type hardness and name via Spring.SetTerrainTypeData
 ! return the terrain-type index from Spring.GetGroundInfo and Spring.GetTerrainTypeData
   these functions now push [number index, string name, ...] rather than [string name, ...]
   onto the stack
 ! change DefaultCommand call order
    previously widgets were called first, and if they returned anything, gadgets weren't called at all
    now gadgets are called first, then widgets are always called and can override
 - add a 3rd param to DefaultCommand callin: the current default command
    works with the above: gadgets receive the default engine cmd,
    widgets then receive what gadgets returned (possibly engine default)
 - add Spring.GetGlobalLos(allyTeamID) -> bool to LuaSyncedRead
 - add Spring.IsNoCostEnabled() -> bool to LuaSyncedRead
 - add Spring.GetLuaMemUsage to LuaUnsyncedRead
   returns the number of (kilo-)bytes used and (kilo-)allocations performed
   by the calling Lua state individually, as well as by all states globally
 - add Spring.GetVidMemUsage to LuaUnsyncedRead
 - add Spring.Get{Unit,Feature}PieceTransformMatrices to LuaUnsyncedRead
 - add DrawSky and DrawSun callins; available when a map has no skybox defined
 - add DrawWater callin
 - add DrawGrass callin (enabled by /drawgrass 2; supersedes engine rendering)
 - add DrawTrees callin (enabled by /drawtrees 2; supersedes engine rendering)
 - make gl.Feature{Raw} able to draw default trees
   if drawing multiple trees in a row, use gl.Feature(treeID, true, false)
   for the *first* tree and gl.Feature(treeID, false, true) for the *last*
   [more efficient; call gl.Feature(treeID, true, true) to render a single